--- a/assets/styles/logged/anb/abc.css
+++ b/assets/styles/logged/anb/abc.css
@@ -1,16 +1,21 @@
 
 .container {
     width: 100%;
+    display: inline-block;
+  }
+
+h1 {
+  text-align: center;
+  margin: 50px 0px 0px;
 }
 
 table {
-    margin: 100px auto 0 auto; 
+    margin: 0px; 
     border-radius: 12px;
     padding: 0;
-    width: 700px;
+    width: 20px;
     /* height: 35.25vw; */
     border-radius: 0;
-
 }
   
   
@@ -26,8 +31,7 @@ th {
    margin: 0;
    width: 300px;
 
-    /* border-top-left-radius: 12px;
-    border-top-right-radius: 12px; */
+
 }
   
   tbody {
@@ -37,7 +41,7 @@ th {
   tr {
     text-align: center;
     padding: 10px;
-    height: 80px;
+    height: 70px;
   }
   
   td {
@@ -50,17 +54,61 @@ th {
   }
 
 .notes {
-    width: 300px;
+    width: 100%;
+    /* display: block; */
+    text-align: center;
+    align-items: center;
+    padding: 0px;
+    margin: 0px;
 }
 
 .tag {
-    background-color: rgb(167, 167, 167);
+    background-color: rgb(209, 209, 209);
     color: black;
     border-radius: 12px;
-    
+    margin: 20px;
+    padding: 20px;
+}
+
+h3 {
+  margin: 10px;
+}
+
+button {
+  height: 50px;
+  width: 200px;
+  background: limegreen;
+  border: 0px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  border-radius: 6px;
+  margin: 50px 0px 10px auto;
+  float: right;
 }
 
 /*************************************RESPONSIVE*************************************************/
+
+@media(min-width:425px) {
+  .table {
+    display: block;
+  }
+}
+
+@media(min-width:769px) {
+  .container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+
+  table {
+    width: 500px;
+  }
+
+}
+
+
 
 @media(min-width:1024px) {
 
@@ -68,9 +116,22 @@ th {
         width: 80%;
         margin-left: auto;
         margin-right: auto;
+        display: flex;
     }
 
+    .table_out {
+      margin: 0 auto;
+    }
 
+    table {
+      width: 700px;
+      margin: 50px auto 0 auto; 
+      display: block;
+    }
 
+    .notes {
+      width: 300px;
+      margin: 50px 20px 40px;
+    }
 
 }
