--- a/assets/styles/logged/anb/abc.css
+++ b/assets/styles/logged/anb/abc.css
@@ -9,13 +9,19 @@ h1 {
   margin: 50px 0px 0px;
 }
 
+.table_out {
+  width: 100%;
+  text-align: center;
+}
+
 table {
-    margin: 0px; 
+    margin: 0px auto; 
     border-radius: 12px;
     padding: 0;
     width: 20px;
     /* height: 35.25vw; */
     border-radius: 0;
+    font-size: 13px;
 }
   
   
@@ -27,7 +33,7 @@ thead {
   
   
 th {
-   padding: 20px;
+   padding: 10px;
    margin: 0;
    width: 300px;
 }
@@ -87,9 +93,30 @@ button {
 /*************************************RESPONSIVE*************************************************/
 
 @media(min-width:425px) {
-  .table {
+  table {
     display: block;
+    font-size: 13px;
+    margin: 0px auto;
+    width: 80%;
   }
+
+  .table_out {
+    width: 100%;
+    text-align: center;
+  }
+
+  th {
+    padding: 20px;
+    margin: 0;
+    width: 300px;
+ }
+
+ tr {
+  text-align: center;
+  padding: 10px;
+  height: 70px;
+ }
+
 }
 
 @media(min-width:769px) {
@@ -98,10 +125,19 @@ button {
     margin-left: auto;
     margin-right: auto;
     display: flex;
-}
+  }
+
+  .table_out {
+    width: 60%;
+    margin: 50px 0;
+  }
 
   table {
-    width: 500px;
+    width: 100%;
+  }
+
+  .notes {
+    margin: 50px 0;
   }
 
 }
@@ -119,12 +155,16 @@ button {
 
     .table_out {
       margin: 0 auto;
+      inline-size: min-content;
+      width: 60%;
     }
 
     table {
-      width: 700px;
-      margin: 50px auto 0 auto; 
+      width: 100%;
+      margin:50px auto 0 auto; 
       display: block;
+      font-size: 15px;
+
     }
 
     .notes {
