--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,9 +1,82 @@
 footer {
-    background: white;
+    background: rgb(235, 235, 235);
     width: 100%;
-    height: 40px;
+    height: auto;
     display: block;
     text-align: center;
     box-sizing: content-box;
-    margin: 0px;
+    margin: 30px 0px 0px 0px;
+}
+
+footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+footer .container div {
+    margin: 30px;
+}
+
+
+
+footer .us ul li {
+    text-decoration: none;
+    list-style: none;
+    margin: 10px;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+}
+
+footer a:hover {
+    cursor: pointer;
+    color: rgb(255, 0, 0);
+    transition: .5s;
+    font-weight: 900;
+}
+
+footer .legal ul li {
+    text-decoration: none;
+    list-style: none;
+    margin: 10px;
+}
+
+footer .social a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.social a:hover {
+    cursor: pointer;
+    color: rgb(255, 0, 0);
+}
+
+@media(min-width:769px){
+    
+    .container {
+        width: 80%;
+    }
+
+    footer{
+        margin: 40px 0px 0px 0px;
+    }
+}
+
+@media(min-width:1024px) {
+    
+    footer{
+        margin: 100px 0px 0px 0px;
+    }
+
+    .footer {
+        padding: 40px;
+    }
+
+    footer .container div {
+        margin: 50px;
+    }
 }
