--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -76,6 +76,10 @@ footer .social a {
         padding: 40px;
     }
 
+    footer .container {
+        margin: 0 auto;
+    }
+
     footer .container div {
         margin: 50px;
     }
