--- a/assets/styles/logged/intro/likes.css
+++ b/assets/styles/logged/intro/likes.css
@@ -153,19 +153,24 @@ label {
 }
 
 
-.ready_in button {
+form button {
     padding: 15px;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
-    margin: 15px;
-    background: rgb(17, 236, 236);
-    border-radius: 12px;
-    border: 1px solid rgb(17, 236, 236);
+    margin: 30px 15px 0px;
+    background: transparent;
+    border-right: 4px solid turquoise;
+    border-left: 4px solid turquoise;
+    border-top: none;
+    border-bottom: none;
+    transition: .5s;
+    color: black;
 }
 
 
-.ready_in button:hover {
+form button:hover {
     cursor: pointer;
+    background: turquoise;
 }
 
 /************************************************RESPONSIVE 769**************************************************/
