--- a/assets/styles/logged/moment/moment.css
+++ b/assets/styles/logged/moment/moment.css
@@ -15,6 +15,7 @@
     border-top-left-radius: 12px;
     border-bottom-right-radius: 12px;
     z-index: -99999;
+    transition: .2s;
 }
 
 .moment_item:hover {
