--- a/assets/styles/logged/intro/likes.css
+++ b/assets/styles/logged/intro/likes.css
@@ -157,7 +157,7 @@ form button {
     padding: 15px;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
-    margin: 30px 15px 0px;
+    margin: 30px 15px 6em;
     background: transparent;
     border-right: 4px solid turquoise;
     border-left: 4px solid turquoise;
